--- a/.github/workflows/pre-merge-checks.yml
+++ b/.github/workflows/pre-merge-checks.yml
@@ -1,10 +1,10 @@
 name: Code quality checks
 
-on: [push]
+on: [pull_request]
 
 jobs:
   build:
-    environment: cwhaleum-dev
+    environment: developmenet
     runs-on: ubuntu-latest
     strategy:
       matrix:
