--- a/.github/workflows/pre-merge-checks.yml
+++ b/.github/workflows/pre-merge-checks.yml
@@ -4,7 +4,7 @@ on: [pull_request]
 
 jobs:
   build:
-    environment: developmenet
+    environment: development
     runs-on: ubuntu-latest
     strategy:
       matrix:
