--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ web3~=5.31.1
 backoff~=2.2.1
 typing-extensions~=4.4.0
 dataclass-wizard~=0.22.2
-websocket-client~=1.5.1
 setuptools~=65.5.1
+websockets~=11.0.1
